# QFakturyD

./: .gitignore  CMakeLists.txt  README.md
doc/: DatabaseSchemaV1.1.dia  DatabaseSchemaV1.dia
qfaktury-core/: CMakeLists.txt  qfaktury-core_global.h
qfaktury-core/Class/: Address.cpp  Address.h  BankAccount.cpp  BankAccount.h  Company.cpp  Company.h  Contractor.cpp  Contractor.h  Person.cpp  Person.h  Product.cpp  Product.h
qfaktury-core/Database/: DatabaseManager.cpp  DatabaseManager.h
qfaktury-core/DatabaseClass/: AddressDao.cpp  AddressDao.h  ContractorDao.cpp  ContractorDao.h  ProductDao.cpp  ProductDao.h
qfaktury-core/Exception/: EmailException.cpp  EmailException.h  MoneyException.cpp  MoneyException.h  NIPException.cpp  NIPException.h  PhoneException.cpp  PhoneException.h  PostCodeException.cpp  PostCodeException.h
qfaktury-core/Model/: ProductModel.cpp  ProductModel.h
qfaktury-core/TypeClass/: Address.cpp  Address.h  BankAccountNumber.cpp  BankAccountNumber.h  City.cpp  City.h  Country.cpp  Country.h  County.cpp  County.h  Email.cpp  Email.h  FlatNumber.cpp  FlatNumber.h  HouseNumber.cpp  HouseNumber.h  Money.cpp  Money.h  Municipality.cpp  Municipality.h  NIP.cpp  NIP.h  Pesel.cpp  Pesel.h  Phone.cpp  Phone.h  PostCode.cpp  PostCode.h  Price.cpp  Price.h  Province.cpp  Province.h  Regon.cpp  Regon.h  Street.cpp  Street.h  Vat.cpp  Vat.h
qfaktury-test/: CMakeLists.txt  main.cpp  tst_MoneyType.cpp  tst_MoneyType.h  tst_VatTest.cpp  tst_VatTest.h  tst_firsttest.cpp  tst_firsttest.h
qfakturydb/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
qfakturydb/Dialog/: ContractorDialog.cpp  ContractorDialog.h  ContractorDialog.ui  ProductDialog.cpp  ProductDialog.h  ProductDialog.ui
qfakturydb/Widget/: ContractorWidget.cpp  ContractorWidget.h  ContractorWidget.ui  ProductWidget.cpp  ProductWidget.h  ProductWidget.ui
